# api/docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "127.0.0.1:8080",
+    "host": "127.0.0.1:9090",
     "basePath": "/",
     "paths": {
         "/admin/config/app": {
@@ -926,6 +926,50 @@
                 }
             }
         },
+        "/admin/demo/cert": {
+            "post": {
+                "description": "证书新增",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "域名管理"
+                ],
+                "summary": "证书新增",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "证书信息",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.DomainCertResource"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/demo/info": {
             "post": {
                 "description": "域名新增",
@@ -1159,6 +1203,132 @@
                     {
                         "type": "integer",
                         "description": "应用发布ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/domain/cert": {
+            "get": {
+                "description": "证书列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "域名管理"
+                ],
+                "summary": "证书列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/domain/cert/{id}": {
+            "put": {
+                "description": "证书修改",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "域名管理"
+                ],
+                "summary": "证书修改",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "证书ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "证书信息",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.DomainCertResource"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "证书删除",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "域名管理"
+                ],
+                "summary": "证书删除",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "证书ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -2032,6 +2202,41 @@
                 }
             }
         },
+        "/admin/notify": {
+            "get": {
+                "description": "通知列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "通知管理"
+                ],
+                "summary": "通知列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/perms": {
             "get": {
                 "description": "权限列表",
@@ -2469,6 +2674,265 @@
                         "schema": {
                             "$ref": "#/definitions/admin.RolePermResource"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/schedule": {
+            "get": {
+                "description": "任务列表",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "任务列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "激活/禁用任务",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "激活/禁用任务",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Job信息",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.JobResource"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "激活/禁用任务",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "激活/禁用任务",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Job信息",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.JobPatchResource"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/schedule/{id}": {
+            "get": {
+                "description": "任务历史记录",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "任务历史记录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "任务ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "任务修改",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "任务修改",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "任务ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Job信息",
+                        "name": "Data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.JobResource"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "code\": 500, \"message\": \"\", \"data\": {}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/schedule/{id}/info": {
+            "get": {
+                "description": "任务详情",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务计划"
+                ],
+                "summary": "任务详情",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "任务调度器类型",
+                        "name": "Type",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "任务ID或者任务历史记录id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2976,6 +3440,32 @@
                 }
             }
         },
+        "admin.DomainCertResource": {
+            "type": "object",
+            "properties": {
+                "channel": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "did": {
+                    "type": "integer"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "admin.DomainInfoResource": {
             "type": "object",
             "properties": {
@@ -3056,6 +3546,53 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "admin.JobPatchResource": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "description": "0 暂停，1 启用",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "admin.JobResource": {
+            "type": "object",
+            "properties": {
+                "command": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "hostIds": {
+                    "type": "string"
+                },
+                "isMore": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "spec": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "triggerType": {
+                    "type": "integer"
                 }
             }
         },
